--- a/css/main.css
+++ b/css/main.css
@@ -50,16 +50,14 @@
 
 .header .inner {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  line-height: 100px;
+  align-items: center;
   height: 100px;
 
   transition: 0.5s;
 }
 
 .header.on .inner {
-  line-height: 80px;
   height: 80px;
 }
 
@@ -71,10 +69,6 @@ h1 img {
   filter: invert(100%);
 }
 
-.header .gnb {
-  margin: 0 0 0 auto;
-}
-
 .header .gnb > ul {
   display: flex;
   gap: 70px;
@@ -84,41 +78,41 @@ h1 img {
   font-size: 17px;
 }
 
-.login_area {
-  padding-left: 50px;
-}
-
-.login_area .member {
+.header .member {
   display: flex;
   gap: 30px;
 }
 
-.login_area .member a {
+.header .member a {
   font-size: 15px;
 }
 
-.header.on .login_area .member a {
+.header.on .member a {
   font-size: 15px;
 }
 
-.login_area .member li {
+.header .member li {
   position: relative;
 }
 
-.login_area .member li ~ li::before {
+.header .member li ~ li::before {
   content: "";
   position: absolute;
   top: 50%;
   left: -15px;
   width: 1px;
-  height: 11px;
+  height: 10px;
   transform: translate(-50%, -50%);
   background: #fff;
   transition: 0.5s;
 }
 
-.header.on .login_area .member li ~ li::before {
+.header.on .member li ~ li::before {
   background: #777;
+}
+
+.header .mobile_btn {
+  display: none;
 }
 
 /* main */
@@ -327,9 +321,15 @@ h1 img {
   position: absolute;
   top: -20%;
   right: 0;
-  width: 650px;
+  width: 0;
   height: 8px;
   background: #9c1d1d;
+
+  transition: 0.5s;
+}
+
+.main_introduce.on .content .content_wrap .txt_box h3::before {
+  width: 650px;
 }
 
 .main_introduce .content .content_wrap .txt_box h3 span {
