--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,14 @@ h1 img {
   padding: 0 30px;
 }
 
+.header .gnb > ul > li {
+  line-height: 100px;
+}
+
+.header.on .gnb > ul > li {
+  line-height: 80px;
+}
+
 .header .gnb > ul > li > a {
   font-size: 17px;
 }
@@ -85,10 +93,6 @@ h1 img {
 }
 
 .header .member a {
-  font-size: 15px;
-}
-
-.header.on .member a {
   font-size: 15px;
 }
 
@@ -322,15 +326,11 @@ h1 img {
   position: absolute;
   top: -20%;
   right: 0;
-  width: 0;
+  width: 650px;
   height: 8px;
   background: #9c1d1d;
 
   transition: 0.5s;
-}
-
-.main_introduce.on .content .content_wrap .txt_box h3::before {
-  width: 650px;
 }
 
 .main_introduce .content .content_wrap .txt_box h3 span {
@@ -622,19 +622,10 @@ h1 img {
 
 .footer .inner .footer_customer {
   margin: 0 0 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: top;
 }
 
 .footer .inner .footer_customer span {
   font-weight: bold;
-}
-
-.footer .inner .footer_content {
-  margin: 0 0 30px 0;
-  padding: 0 0 25px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .footer .inner .footer_address {
@@ -673,4 +664,385 @@ h1 img {
   padding: 10px;
   font-size: 20px;
   cursor: pointer;
+}
+
+/*
+///////////////////////////
+////////// 반응형 /////////
+///////////////////////////
+*/
+
+@media (max-width: 768px) {
+  .header.on {
+    color: #fff;
+  }
+
+  .header.on .inner {
+    height: 100px;
+  }
+
+  .header h1 {
+    position: fixed;
+    z-index: 1000;
+  }
+
+  .header.on h1 img {
+    filter: invert(100%);
+  }
+
+  .header .gnb {
+    position: fixed;
+    inset: 0 auto 0 100%;
+    background: #444;
+    width: 100%;
+
+    transition: 0.5s;
+  }
+
+  .header .gnb.on {
+    inset: 0 auto 0 0;
+  }
+
+  .header .gnb > ul {
+    flex-direction: column;
+    gap: 0;
+    padding: 150px 18px 0 18px;
+  }
+
+  .header .gnb > ul > li {
+    line-height: 40px;
+  }
+
+  .header.on .gnb > ul > li {
+    line-height: 40px;
+  }
+
+  .header .gnb > ul > li > a {
+    border-bottom: 1px solid #666;
+  }
+
+  .header .member {
+    position: fixed;
+    inset: 0 auto 0 100%;
+  }
+
+  .header .gnb.on .member {
+    inset: 0 auto 0 0;
+  }
+
+  .header .mobile_btn {
+    display: block;
+
+    position: fixed;
+    inset: 30px 30px auto auto;
+    z-index: 1000;
+    width: 30px;
+    height: 30px;
+  }
+
+  .mobile_btn::before,
+  .mobile_btn::after {
+    content: "";
+    position: absolute;
+    inset: 14px 5px auto 5px;
+    height: 2px;
+    background: #fff;
+
+    transition: 0.5s;
+  }
+
+  .header.on .mobile_btn::before,
+  .header.on .mobile_btn::after {
+    background: #444;
+  }
+
+  .header.on .mobile_btn.on::before,
+  .header.on .mobile_btn.on::after {
+    background: #fff;
+  }
+
+  .mobile_btn.on::before {
+    transform: rotate(45deg);
+  }
+
+  .mobile_btn.on::after {
+    transform: rotate(-45deg);
+  }
+
+  .mobile_btn button {
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+
+  .mobile_btn button::before,
+  .mobile_btn button::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background: #fff;
+    opacity: 1;
+
+    transition: 0.5s;
+  }
+
+  .header.on .mobile_btn button::before,
+  .header.on .mobile_btn button::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background: #444;
+    opacity: 1;
+  }
+
+  .header.on .mobile_btn.on button::before,
+  .header.on .mobile_btn.on button::after {
+    opacity: 0;
+  }
+
+  .mobile_btn.on button::before,
+  .mobile_btn.on button::after {
+    opacity: 0;
+  }
+
+  .mobile_btn button::before {
+    inset: 7px 5px auto 5px;
+  }
+
+  .mobile_btn button::after {
+    inset: auto 5px 7px 5px;
+  }
+
+  /* main */
+
+  /* 메인 슬라이드 */
+
+  .main_visual .main_slide .slogan {
+    text-align: center;
+  }
+
+  .main_visual .main_slide .main_slide_nk .slogan p {
+    margin: 0 0 0 auto;
+    width: 100%;
+    line-height: 22px;
+  }
+
+  /* section 01 */
+
+  .main_content .content {
+    flex-direction: column;
+  }
+
+  /* section 02 */
+
+  .main_introduce .content .content_wrap .img_box {
+    width: 100%;
+  }
+
+  .main_introduce .content .content_wrap .img_box img {
+    height: 300px;
+  }
+
+  .main_introduce .content .content_wrap .txt_box {
+    position: static;
+  }
+
+  .main_introduce .content .content_wrap .txt_box h3 {
+    margin: 0 0 38px 0;
+    font-size: 40px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .main_introduce .content .content_wrap .txt_box h3::before {
+    top: 250px;
+    right: 0;
+    width: 320px;
+    height: 8px;
+    background: #9c1d1d;
+  }
+
+  .main_introduce .content .content_wrap .txt_box h3 span {
+    display: block;
+  }
+
+  .main_introduce .content .content_wrap .txt_box p {
+    line-height: 1.75;
+    text-align: right;
+  }
+
+  .main_introduce .content .content_wrap .txt_box p:nth-of-type(1) {
+    margin: 0 0 20px 0;
+  }
+
+  .main_introduce .content .content_wrap .txt_box i {
+    display: block;
+    margin: 0 0 10px 0;
+    font-style: italic;
+    color: #777;
+  }
+
+  .main_distribution {
+    padding: 0;
+  }
+
+  .main_distribution .content_wrap {
+    position: relative;
+    width: 100%;
+  }
+
+  .main_distribution .content_wrap::after {
+    content: "";
+    position: absolute;
+    inset: 0 0 0 0;
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .main_distribution .content_wrap .txt_box {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    text-align: center;
+  }
+
+  .main_distribution .content_wrap .txt_box h3 {
+    font-size: 40px;
+    color: #fff;
+    word-break: keep-all;
+  }
+
+  .main_distribution .content_wrap .txt_box h3 span {
+    color: #fff;
+  }
+
+  .main_distribution .content_wrap .txt_box p {
+    color: #fff;
+  }
+
+  .main_brand .content .content_wrap .img_box {
+    width: 100%;
+    margin: 0 0 20px 0;
+  }
+
+  .main_brand .content .content_wrap .txt_box {
+    position: static;
+  }
+
+  .main_brand .content .content_wrap .txt_box h3 {
+    font-size: 40px;
+  }
+
+  .main_brand .content .content_wrap .txt_box h3::before {
+    top: 440px;
+    right: 0;
+    width: 350px;
+    height: 8px;
+    background: #9c1d1d;
+  }
+
+  .main_brand .content .content_wrap .txt_box h3 span {
+    display: block;
+  }
+
+  .main_brand .content .content_wrap .txt_box p {
+    line-height: 1.75;
+    text-align: right;
+  }
+
+  .main_brand .content .content_wrap .txt_box p:nth-of-type(1) {
+    margin: 0 0 20px 0;
+  }
+
+  /* section 03 */
+
+  .main_feature .freature_tab .freature_tab_link {
+    display: grid;
+    grid-template-columns: repeat(3, 105px);
+  }
+
+  .main_feature .freature_tab .freature_tab_content .con {
+    flex-direction: column;
+  }
+
+  .main_feature .freature_tab .freature_tab_content .txt_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 35px;
+  }
+
+  .main_feature .freature_tab .freature_tab_content .txt_box span {
+    display: block;
+    margin: 0 0 10px 2px;
+    font-size: 14px;
+    color: #999;
+  }
+
+  .main_feature .freature_tab .freature_tab_content .txt_box h3 {
+    word-break: keep-all;
+  }
+
+  .main_feature .freature_tab .freature_tab_content .txt_box h3::after {
+    bottom: -30%;
+  }
+
+  .main_feature .freature_tab .freature_tab_content .img_box .img {
+    width: 100%;
+  }
+
+  /* footer */
+
+  .footer {
+    padding: 40px 0;
+    background: #444;
+    color: #f9f9f9;
+  }
+
+  .footer .tab {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footer .inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 1200px;
+    font-style: normal;
+
+    font-size: 15px;
+  }
+
+  .footer ul > li ~ li::before {
+    display: none;
+  }
+
+  .footer .inner .footer_customer {
+    margin: 0 0 20px 0;
+  }
+
+  .footer .inner .footer_address {
+    margin: 0 0 20px 0;
+  }
+  .footer .inner .footer_call {
+    margin: 0 0 20px 0;
+  }
+
+  .to_top {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 999;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+  }
+
+  .to_top.on {
+    bottom: 10px;
+    visibility: visible;
+    opacity: 1;
+  }
 }
